--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "element-react": "^1.4.33",
+    "element-theme-default": "^1.4.13",
+    "firebase": "^5.9.0",
+    "node-sass": "^4.11.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-hot-loader": "^4.8.0",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "react-scrollchor": "^6.0.0",
+    "react-table": "^6.9.2"
   },
   "scripts": {
     "start": "react-scripts start",
